update npm rules

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 registry=https://npm.pkg.github.com/Tradomatic
-@Tradomatic:registry=https://npm.pkg.github.com
+@tradomatic:registry=https://npm.pkg.github.com
